<resources>
    <string name="app_name">FlavorQuest</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="loading_home_screen">Loading Home Screen</string>
</resources>